# eigenvalue-accuracy

./: CMakeLists.txt
src/: armadillo.cpp  eigen3.cpp  lapack.cpp  lapack.h  printer.h  values.h
